added personal information

--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -4,13 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Perturbation Analysis for Parabolic Partial Differential Equations"
+    "# Perturbation Analysis for Parabolic Partial Differential Equations\n",
+    "\n",
+    "<h2> Cristopher Arenas</h2>\n",
+    "<h3> M.Sc. Student </h3>\n",
+    "<h3> Universidad Técnica Federico Santa Maria, Campus San Joaquín </h3>\n",
+    "cristopher.arenas@alumnos.usm.cl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -28,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cubic_spline(x, y, end=None, k1=0, k2=0, p1=0, p2=0):\n",
@@ -120,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bisect(f, a, b, verb=False, tol=10e-12):\n",
@@ -161,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def simpsons(myfun, N, a, b, verbose=False, text=\"\", figname=\"\"):\n",
@@ -201,7 +214,7 @@
    "source": [
     "Parabolic Partial Differential Equations model different process in the scope of Engineering and Science. One representative Parabolic Partial Differential Equation is the following:\n",
     "$$\n",
-    "\\frac{\\partial u(x,t)}{\\partial t} = c\\,\\frac{\\partial^2 u(x,t)}{\\partial x^2} + d\\,\\frac{\\partial u(x,t)}{\\partial \\theta} \n",
+    "\\frac{\\partial u(x,t)}{\\partial t} = c\\,\\frac{\\partial^2 u(x,t)}{\\partial x^2} + b\\,\\frac{\\partial u(x,t)}{\\partial x} \n",
     "$$"
    ]
   },
@@ -388,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def solve_IVP(w,t_max=10,show_plot=False,delta=1):\n",
@@ -579,7 +594,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{1}{P}\\int_{0}^{P} \\frac{1}{\\omega^2(\\Theta(\\tau-s))} \\approx \\frac{1}{P} \\sum_{i=1}^{K} w_i \\frac{1}{\\omega^2(\\Theta(\\tau_i-s))} = c(s)\n",
+    "\\frac{1}{P}\\int_{0}^{P} \\frac{1}{\\omega^2(\\Theta(\\tau-s))} \\mathrm{d}\\tau \\approx \\frac{1}{P} \\sum_{i=1}^{K} w_i \\frac{1}{\\omega^2(\\Theta(\\tau_i-s))} = c(s)\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -616,6 +631,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -677,7 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_simulation_a0(w,F,i,eps,delta=1,num=1):\n",
@@ -732,7 +750,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_u0(w,F,i,eps=1,t_max=10,points_th=50,points_T=500,delta=1,num=1):\n",
@@ -769,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_simulation_u0(w,F,i,eps,delta=1,num=1):\n",
@@ -788,7 +810,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -806,7 +830,7 @@
     "Next, the problem is solved numerically with finite differences with an implicit method. Consider the problem in the form:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial u(\\theta,t)}{\\partial t} + \\frac{\\mathrm{d}\\omega(\\theta_i)}{\\mathrm{d} \\theta} u(\\theta,t) + \\frac{\\partial u(\\theta,t)}{\\partial \\theta} \\omega(\\theta) = \\varepsilon \\frac{\\partial^2 u(\\theta,t)}{\\partial \\theta^2}\n",
+    "\\frac{\\partial u(\\theta,t)}{\\partial t} + \\frac{\\mathrm{d}\\omega(\\theta)}{\\mathrm{d} \\theta} u(\\theta,t) + \\frac{\\partial u(\\theta,t)}{\\partial \\theta} \\omega(\\theta) = \\varepsilon \\frac{\\partial^2 u(\\theta,t)}{\\partial \\theta^2}\n",
     "$$\n",
     "\n",
     "The formulas of the **implicit** finite differences will be **backward in time** and **central in space** for the first derivative (in order to mantain the spatial derivative with a second order aproximation). Let $u_{i,n} \\approx u(\\theta_i,t_n)$, where $\\theta_i$ and $t_n$ are $N$ and $M$ equidistant points in the spatial and temporal axes, respectively.\n"
@@ -911,7 +935,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fd_method(w,wp,F,N,M,t_max,eps,delta=1,num=1,method=\"Implicit\"):\n",
@@ -1006,7 +1032,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def spectralDerivativeByFFT(v,nu=1):\n",
@@ -1032,7 +1060,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fft_method(w,wp,F,N,M,t_max,eps,delta=1,num=1):\n",
@@ -1088,7 +1118,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def F(theta,num=1):\n",
@@ -1148,11 +1180,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def w(theta, delta=1):\n",
-    "    return delta*theta**0 \n",
+    "    return delta*(theta**0) \n",
     "def wp(theta):\n",
     "    return theta*0"
    ]
@@ -1160,7 +1194,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_functions(w,wp,F,delta=1,num=1):\n",
@@ -1210,7 +1246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bfeb2548bd94628b9294a30a9c17e38",
+       "model_id": "83ee272210b34777b242f69cabfe4a02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1256,7 +1292,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def simulation(w,wp,F,i,N,M,t_max,eps,fd_mode,delta,num): \n",
@@ -1346,7 +1384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be2459340ee74294b7f55e9c0841a560",
+       "model_id": "dd5a2236b35d493fb4544f8dd7539366",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1460,7 +1498,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_Theta(w,delta):\n",
@@ -1506,7 +1546,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "713fb3b87a1b4a8a922e5e1d165c4146",
+       "model_id": "3c72e4c242c94842a031e37bd2cdf83a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1566,7 +1606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff37d41af15945aaba6ef81ae4bdd477",
+       "model_id": "8561b9319155464e99271147ae97b40b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1621,7 +1661,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd31e626d5fe4c139ba3d838e61d84c0",
+       "model_id": "b00edd6ce8e440d486362acaa1b51836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1672,8 +1712,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def comparison(w,wp,F,i,eps,T_max,N,M,method=1,delta=1,num=1):\n",
@@ -1723,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -1731,7 +1773,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9507c6e4c1eb47e6a8d59b5210e68876",
+       "model_id": "56b4991a8bd1455cafec1c15a9772f85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1748,7 +1790,7 @@
        "<function __main__.comparison(w, wp, F, i, eps, T_max, N, M, method=1, delta=1, num=1)>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1835,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1812,7 +1856,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def w2(theta,delta=1):\n",
@@ -1830,7 +1876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f399ad8fd4c48cb83ddf20603afa5d7",
+       "model_id": "7cbbdaf39b5f49f58b9c50bf4d6976be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1885,7 +1931,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c8739a0c055438b88d84eb8db5fbacb",
+       "model_id": "5f5c92992edb486588e469b70d668677",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1997,7 +2043,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a3777dec64b4ae28e3a1d62fef475eb",
+       "model_id": "a74a54981a2a40158e16c547762a59a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2050,7 +2096,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b996f6fcd0f84cd6a42c9ec362cda3d4",
+       "model_id": "a53f69c56f4147a8a5f8984e3aa009fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2105,7 +2151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c229d49632564599918a35150a342ee6",
+       "model_id": "2d17307a6d8944c59f51e687259b9e19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2154,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -2162,7 +2208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2859debdb2f64ddebe545c94a9d6a98a",
+       "model_id": "895bd1d433384468bb0ab13c53af9bc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2179,7 +2225,7 @@
        "<function __main__.comparison(w, wp, F, i, eps, T_max, N, M, method=1, delta=1, num=1)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2229,7 +2275,7 @@
     "\n",
     "In this work, a method that uses different scales in order to obtain an approximation asymtotic at $T = \\mathcal{O}(1)$ was studied and developed with numerical examples. \n",
     "\n",
-    "Is important to consider the effect of defining the _slow scale_ $T$, since with this scale is possible to avoid secular terms that ocurs in the _fast scale_.\n",
+    "It is important to consider the effect of defining the _slow scale_ $T$, since with this scale is possible to avoid secular terms that ocurs in the _fast scale_.\n",
     "\n",
     "When a numerical method using a unique _fast scale_ was compared with the multiscale, several differences appear as time is increasing. Also, using a slow scale is less expensive that fast scale when $\\varepsilon$ is too small and the effect of diffusion in time is too long.  "
    ]
@@ -2251,9 +2297,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pendiente**\n",
+    "- poner datos informativos \n",
+    "- algunos 3D\n",
+    "- comparison en el mismo tiempo al cambiar el M"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -2274,7 +2332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
